--- a/Client/src/app/components/contact/contact.component.css
+++ b/Client/src/app/components/contact/contact.component.css
@@ -10,15 +10,25 @@ h1,h2,h3,h4,h5,h6{
   color: #081f3e;
 }
 .title{
-  position: absolute;
-  top: 60%;
-  left: 20%;
   transform: translateY(-40%);
   -webkit-transform: translateY(-40%);
   -moz-transform: translateY(-40%);
   -ms-transform: translateY(-40%);
   -o-transform: translateY(-40%);
 }
+
+.titleLeft{
+  position: absolute;
+  top: 60%;
+  left: 20%;
+}
+
+.titleRight{
+  position: absolute;
+  top: 60%;
+  right: 20%;
+}
+
 .title h2{
   font-size: 50px;
 }
